[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/player_bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://PNG/playerShip1_orange.png" type="Texture" id=3]
[ext_resource path="res://PNG/Effects/fire15.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 34.1898

[node name="player" type="Area2D"]

position = Vector2( 303.072, 907.98 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
bullet = ExtResource( 2 )

[node name="ship" type="Sprite" parent="." index="0"]

editor/display_folded = true
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="ship" index="0"]

position = Vector2( 0, 55 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0.337463, 3.71223 )
shape = SubResource( 1 )

[node name="bullet_container" type="Node" parent="." index="2"]

[node name="muzzle_right" type="Position2D" parent="." index="3"]

position = Vector2( 30, -30 )
_sections_unfolded = [ "Transform" ]

[node name="muzzle_left" type="Position2D" parent="." index="4"]

position = Vector2( -30, -30 )
_sections_unfolded = [ "Transform" ]

[node name="gun_timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false


